--- a/package.json
+++ b/package.json
@@ -11,16 +11,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "avatar-initials": "^6.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "graphile-worker": "^0.16.6",
+    "jdenticon": "^3.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mailgun-js": "^0.22.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
+    "node-mailjet": "^6.0.5",
     "nodemon": "^3.1.3",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.6.14",
     "sequelize": "^6.37.3"
   }
 }
